--- a/package.json
+++ b/package.json
@@ -25,19 +25,24 @@
     "clsx": "^2.1.0",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
-    "next": "^14.0.4",
+    "lucide-react": "^0.508.0",
+    "next": "^15.3.2",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.3",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sharp": "0.33.1"
+    "sharp": "0.33.1",
+    "tsx": "^4.19.4"
   }
 }
